--- a/Report.NET.Framework/Report.NET.Framework.csproj
+++ b/Report.NET.Framework/Report.NET.Framework.csproj
@@ -18,7 +18,7 @@
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>TRACE;DEBUG;Framework2;Compatible_0_8x</DefineConstants>
+    <DefineConstants>TRACE;DEBUG</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
@@ -59,33 +59,27 @@
     <Compile Include="LayoutManager\TlmColumnDef.cs" />
     <Compile Include="LayoutManager\TlmRow.cs" />
     <Compile Include="LayoutManager\TlmRowDef.cs" />
-    <Compile Include="PDF\GraphicsState.cs" />
     <Compile Include="PDF\PdfFileElement.cs" />
     <Compile Include="PDF\PdfFormatter.cs" />
-    <Compile Include="PDF\PdfGraphicsStateData.cs" />
     <Compile Include="PDF\PdfIndirectObject.cs" />
     <Compile Include="PDF\PdfIndirectObject_Font.cs" />
     <Compile Include="PDF\PdfIndirectObject_PageContents.cs" />
     <Compile Include="PDF\PdfRepObjX.cs" />
-    <Compile Include="PDF\PdfReport.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Prop\BrushProp.cs" />
     <Compile Include="Prop\FontData.cs" />
     <Compile Include="Prop\FontDef.cs" />
     <Compile Include="Prop\FontProp.cs" />
-    <Compile Include="Prop\GraphicsStateData.cs" />
     <Compile Include="Prop\OpenTypeFontData.cs" />
     <Compile Include="Prop\OpenTypeReader.cs" />
     <Compile Include="Prop\PenProp.cs" />
     <Compile Include="Prop\Type1FontData.cs" />
     <Compile Include="RepObj\Container.cs" />
     <Compile Include="RepObj\Page.cs" />
-    <Compile Include="RepObj\PageData.cs" />
     <Compile Include="RepObj\RepArc.cs" />
     <Compile Include="RepObj\RepImage.cs" />
     <Compile Include="RepObj\RepLine.cs" />
     <Compile Include="RepObj\RepObj.cs" />
-    <Compile Include="RepObj\RepPoly.cs" />
     <Compile Include="RepObj\RepRect.cs" />
     <Compile Include="RepObj\RepString.cs" />
     <Compile Include="RepObj\StaticContainer.cs" />
