Transfer library to .NET Standard

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,7 @@ Report.NET.Framework.Tests/bin/
 Report.NET.Framework.Tests/obj/
 Report.NET.Standart/bin/
 Report.NET.Framework/bin/
+Report.NET.Standard/bin/
+Report.NET.Core.Tests/bin/
+Report.NET.Core.Tests/obj/
+Report.NET.Standard/obj/
