--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ git:
   depth: false
 
 install:
-#  - sudo snap alias dotnet-sdk.dotnet dotnet
+  - sudo snap alias dotnet-sdk.dotnet dotnet
   - export PATH="$PATH:$HOME/.dotnet/tools"
   - dotnet --version
   - dotnet tool install --global dotnet-sonarscanner
