--- a/.travis.yml
+++ b/.travis.yml
@@ -2,25 +2,26 @@ language: csharp
 sudo: required
 dist: xenial
 mono: none
+dotnet: 2.1
 
 addons:
   sonarcloud:
     organization: "kashinoleg"
     token:
       secure: $SONAR_TOKEN
-  snaps:
-  - name: dotnet-sdk
-    confinement: classic
-    channel: latest/beta
+#  snaps:
+#  - name: dotnet-sdk
+#    confinement: classic
+#    channel: latest/stable
 
 git:
   depth: false
 
 install:
-  - sudo snap alias dotnet-sdk.dotnet dotnet
-  - export PATH="$PATH:$HOME/.dotnet/tools"
+#  - sudo snap alias dotnet-sdk.dotnet dotnet
   - dotnet --version
   - dotnet tool install --global dotnet-sonarscanner
+  - export PATH="$PATH:$HOME/.dotnet/tools"
 
 script:
   - dotnet sonarscanner begin /d:sonar.login="$SONAR_TOKEN" /d:sonar.host.url="https://sonarcloud.io" /k:"kashinoleg_Report.NET.Standard" /o:"kashinoleg" /n:"Report.NET.Standard" /v:"1.0.0.$TRAVIS_BUILD_NUMBER" /d:sonar.links.homepage="https://github.com/kashinoleg/Report.NET.Standard" /d:sonar.links.ci="https://travis-ci.org/kashinoleg/Report.NET.Standard" /d:sonar.links.scm="https://github.com/kashinoleg/Report.NET.Standard" /d:sonar.links.issue="https://github.com/kashinoleg/Report.NET.Standard/issues" /d:sonar.sourceEncoding="UTF-8" /d:sonar.language="cs" /d:sonar.exclusions="**/bin/**/*,**/obj/**/*"
