Fixed error font not found

--- a/Report.NET.Core.Tests/Report.NET.Core.Tests.csproj
+++ b/Report.NET.Core.Tests/Report.NET.Core.Tests.csproj
@@ -4,7 +4,23 @@
     <TargetFramework>netcoreapp3.0</TargetFramework>
 
     <IsPackable>false</IsPackable>
+
+    <ApplicationIcon />
+
+    <OutputType>Library</OutputType>
+
+    <StartupObject />
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Remove="Image\Sample.jpg" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="Image\Sample.jpg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.4.0" />
