--- a/Report.NET.Standard/Report.NET.Standard.csproj
+++ b/Report.NET.Standard/Report.NET.Standard.csproj
@@ -13,12 +13,13 @@
     <Description>Report.NET.Standard is an free library to dynamically generate PDF documents for various .NET platforms, including .NET Standard.</Description>
     <PackageReleaseNotes>Release library for .NET Standard.</PackageReleaseNotes>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
+    <AssemblyVersion>1.0.1.0</AssemblyVersion>
+    <FileVersion>1.0.1.0</FileVersion>
+    <Version>1.0.1</Version>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="System.Drawing.Common" Version="4.6.0" />
-    <PackageReference Include="System.Text.Encoding" Version="4.3.0" />
-    <PackageReference Include="System.Text.Encoding.CodePages" Version="4.6.0" />
   </ItemGroup>
 
 </Project>
