--- a/Report.NET.Standard/Report.NET.Standard.csproj
+++ b/Report.NET.Standard/Report.NET.Standard.csproj
@@ -19,7 +19,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="System.Drawing.Common" Version="4.6.0" />
+    <PackageReference Include="System.Drawing.Common" Version="4.7.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Print\" />
   </ItemGroup>
 
 </Project>
